# jwst_reffiles

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  configuration_files.rst  final_reference_file_creation.rst  index.rst  individual_reference_file_creation.rst  install.rst  official_algorithms.rst  official_bad_pixel_mask.rst  organize_input_files.rst  plug_in_user_module.rst  quickstart.ipynb
jwst_reffiles/: mkref.py  mkref_bpm.py  mkref_example_bpm.py  mkref_gain_armin.py  mkref_rdnoise_nircam.py  mkref_template.py  mkrefs.cfg  mkrefs.py  mkrefs_miri_defaults.cfg  plugin_wrapper.py
jwst_reffiles/bad_pixel_mask/: bad_pixel_mask.py  badpix_from_flats.py  fgs_guider1_manual_flags.txt  fgs_guider2_manual_flags.txt  miri_mirifulong_manual_flags.txt  miri_mirifushort_manual_flags.txt  miri_mirimage_manual_flags.txt  mkref_bad_pixel_mask.py  mkref_badpix_from_flats.py  mkref_bpm.py  mkref_example_bpm.py  nircam_nrca1_manual_flags.txt  nircam_nrca2_manual_flags.txt  nircam_nrca3_manual_flags.txt  nircam_nrca4_manual_flags.txt  nircam_nrcalong_manual_flags.txt  nircam_nrcb1_manual_flags.txt  nircam_nrcb2_manual_flags.txt  nircam_nrcb3_manual_flags.txt  nircam_nrcb4_manual_flags.txt  nircam_nrcblong_manual_flags.txt  niriss_nis_manual_flags.txt  nirspec_nrs1_manual_flags.txt  nirspec_nrs2_manual_flags.txt
jwst_reffiles/dark_current/: badpix_from_darks.py  dark_reffile.py  mkref_dark.py
jwst_reffiles/example/: example_readnoise_module.py  mkref_example_readnoise_module.py  myexamplescript.py  plugin_example_readnoise_module.py
jwst_reffiles/gain/: gain.py  gain_reffile.py  mkref_gain_armin.py
jwst_reffiles/pipeline/: calib_prep.py  find_file.py  pipeline_steps.py
jwst_reffiles/readnoise/: example_readnoise_module_to_plug_in.py  mkref_rdnoise_nircam.py  mkref_readnoise.py  readnoise.py
jwst_reffiles/superbias/: superbias.py
jwst_reffiles/templates/: plugin_template.py
jwst_reffiles/utils/: constants.py  crds_checks.py  definitions.py  dq_flags.py  file_utils.py  logging_functions.py  permissions.py  tools.py
style_guide/: style_guide.md
tests/: test_bad_pixel_mask.py  test_badpix_from_darks.py  test_badpix_from_flats.py  test_calib_prep.py  test_dq_functions.py
(+1 files in other folders)
