[project]
name = "jwst_reffiles"
description = "Reference file creation software for JWST"
readme = "README.md"
authors = [
    { name = "Bryan Hilbert" },
    { name = "Armin Rest"},
    { name = "Alicia Canipe"}
]
keywords = [
    "astronomy",
    "python",
]
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "astropy>=6.0,<7",
    "jwst>=1.13.4,<2",
    "matplotlib>=3.8.3,<4",
    "numpy>=1.26.4,<2.2",
    "scipy>=1.12.0,<2"
]
dynamic = [
    "version",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest"
]
docs = [
    "nbsphinx",
    "ipykernel",
    "sphinx",
    "sphinx_rtd_theme",
]

[project.license]
file = "LICENSE.txt"
content-type = "text/plain"

[build-system]
requires = [
    "setuptools>=68.0.0",
    "numpy",
    "wheel",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]

[tool.pytest]
junit_family = "xunit2"
